[metadata]
name = lst-utils-cloudyd3
version = 0.2.0
author = Aliks Popov
author_email = cloudyd3d@gmail.com
description = Utilities for LST
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cloudyd3/lst-utils
project_urls =
    Bug Tracker = https://github.com/cloudyd3/lst-utils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License version 3 (GPLv3)
    Operating System :: OS Independent
license = GNU General Public License version 3 (GPLv3)


[options]
packages = find:
python_requires = >=3.7
install_requires =
    gspread~=5.3.2
    setuptools~=62.3.2
    prettytable~=3.3.0

[options.entry_points]
console_scripts =
    disputes = lst_utils.__main__:main

